updates to landing page and no media querries

--- a/services.html
+++ b/services.html
@@ -211,11 +211,11 @@
 <div class="beta-head col-lg-7">
     <h2 class="service-name display-4 text-center">School Analytics</h2>
     
-    <p class="beta-para ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At accusamus accusantium quod, omnis, sed harum nihil natus aliquid aut veniam dolorem, fugit vel. Voluptates, sit suscipit dolorum dolor consequuntur aspernatur praesentium laudantium nam asperiores ea ex cumque! Maiores, dolor impedit.</p> 
+    <p class="beta-para text-lg-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At accusamus accusantium quod, omnis, sed harum nihil natus aliquid aut veniam dolorem, fugit vel. Voluptates, sit suscipit dolorum dolor consequuntur aspernatur praesentium laudantium nam asperiores ea ex cumque! Maiores, dolor impedit.</p> 
     <hr>
   </div>  
 
-<div class="container-fluid">
+<div class="container-fluid my-4">
   <div class="row d-flex flex-lg-row-reverse justify-content-center align-items-center">
     <div class="col-lg-4 col-md-6">
       <img src="./illustrations/service-lytics.svg" alt="service image" class="img-fluid" loading="lazy">
