updates to about, ent and sch pages

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 
 <div class="content-wrapper">
-  <!-- Header content -->
+<!-- Header content -->
 <header class="header-content container-fluid">
 
   <nav class="navbar navbar-expand-md navbar-light ">
@@ -183,7 +183,7 @@
           
           <p class="service-para">For people who have little time to get the perfect CV, motivation letter or statement of purpose done, we take the burden off their hands and after a conversation or two, we write, edit, and rewrite SOPs, CVs and motivation letters that highlight the most relatable versions of themselves.</p>
           
-          <a href="#" class="service-learn-more">Learn more</a>
+          <a href="./services.html" class="service-learn-more">Learn more</a>
         </div>
     </div>
 
@@ -197,7 +197,7 @@
             <h4 class="service_header py-3 display-5">School Analytics</h4>
             <p class="service-para">We provide schools with monitoring and evaluation support to help school managers make informed decisions that improve student outcomes and enrollment. This we do by designing and conducting surveys that capture the expectations of parents and needs of the students, and using advanced data analytics, we provide actionable insights on how adjustments could be made to curriculum delivery and student follow-up to help meet the expectations of the students and parents and ultimately prepare the students not only for jobs, but for job hunting as well.</p>
 
-            <a href="#" class="service-learn-more">Learn more</a>
+            <a href="./services.html" class="service-learn-more">Learn more</a>
           </div>
         </div>
     </div>
@@ -212,7 +212,7 @@
             <h4 class="service_header py-3 display-5">Interview Prep.</h4>
             <p class="service-para">Getting a job is a long process, and sometimes with all the skills, and with one foot in the door, people still find it hard to make a compelling case about why they should be chosen over other candidates. Our interview prep service helps struggling job seekers develop a mastery of the storytelling techniques needed to thrive in interviews. Repeatedly simulating the interviews till the candidates are ready to out-do themselves. </p>
 
-            <a href="#" class="service-learn-more">Learn more</a>
+            <a href="./services.html" class="service-learn-more">Learn more</a>
           </div>
         </div>
     </div>
