--- a/services.html
+++ b/services.html
@@ -38,7 +38,7 @@
     
           <li class="nav-item"><a href="./about.html" class="nav-link px-2">About<a></li>
 
-          <li class="nav-item"><a href="./services.html" class="nav-link px-2 ">Services</a></li>
+          <li class="nav-item"><a href="#home" class="nav-link px-2 ">Services</a></li>
 
           <li class="nav-item"><a href="#contactus" class="nav-link px-2 ">Contact</a></li>
                     
@@ -77,14 +77,14 @@
     <p class=" py-6">We are companions for everyone struggling to market themselves. Our services are designed to help you craft the stories that showcase the sweetest things about you or your project.</p>
 
     <div class="button-controls py-4">
-      <a href="#services" class="btn btn-service">FOR STUDENTS</a>
+      <a href="#scholarships" class="btn btn-service">FOR STUDENTS</a>
 
       <a href="#contactus" class="btn btn-contact ">CONTACT US</a>
     </div>    
   </div>
 
   <div class="service-hero-image d-none d-lg-inline-flex d-flex justify-content-center align-items-center">
-    <img src="./images/standout.svg" alt="job seeker" loading="lazy" width="400" height="400" class="img-fluid">      
+    <img src="./images/standout.svg" alt="job seeker" loading="lazy" width="400" height="300" class="img-fluid">      
   </div>
 
 </section>
@@ -137,7 +137,7 @@
             <h2 class="scholarship-header ">When it is time for grad school, students and parents come to us.</h2>
             <p class="scholarship-para">Using nothing but effective storytelling, we help students realize their most endearing dream of studying in the most prestigeous schools abroad. We walk them through finding where to go, and when they settle on where to go, we help them prepare air tight applications that all but guarantee admission.</p>
 
-            <a href="#" class="service-learn-more">Learn more</a>
+            <a href="./scholarships.html" class="service-learn-more">Learn more</a>
           </div>
         </div>
   </div>
@@ -183,7 +183,7 @@
 
 
 <!--entrepreneurs-->
-<div class=" section entrepreneurs d-flex justify-content-center align-items-center">
+<div class=" section entrepreneurs d-flex justify-content-center align-items-center" id="scholarships">
 
   <div class="container col-xxl-12 px-4 py-2">
         <div class="row flex-lg-row-reverse  justify-content-center align-items-center g-1 py-5">
@@ -196,7 +196,7 @@
 
             <p class="service-para"> The finest entrepreneurs, the one percent who have changed the course of history with one product or the other, have been great storytellers. With a mastery of storytelling techniques, you can make investors flog to you and gain new clients with a clear cut catchy message, which undoubtedly will bee difficult to resit.  That is what we do, even for the faint hearted.</p>
 
-            <a href="#" class="service-learn-more">Learn more</a>
+            <a href="./entrepreneurs.html" class="service-learn-more">Learn more</a>
           </div>
         </div>
   </div>
